# spreadsheet-analysis

./: README.md  pyproject.toml
src/spreadsheet_analysis/: __init__.py  tool.py
