[project]
name = "spreadsheet_analysis"
version = "0.1.0"
description = "Pandas-based analysis tool for CSV and XLSX files. Converts natural language queries into pandas operations for aggregations, filtering, grouping, and more."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.11.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "tool"
